--- a/templates/userlogin.html
+++ b/templates/userlogin.html
@@ -21,7 +21,7 @@ Login
             </div>
             <div style="max-width: 50%">
                 {% for message in get_flashed_messages() %}
-                <div class="alert alert-info }}">
+                <div class="alert alert-info">
                     {{ message }}
                 </div>
                 {% endfor %}  
