--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@ User - Profile
 {% block main %}
 <div class="container pt-4">
       <section style="background-color: #eee;">
-        <div class="container py-5">
+        <div class="container py-2">
           <div class="row">
             <div class="col-lg-4">
               <div class="card mb-4">
@@ -102,6 +102,52 @@ User - Profile
                         <p class="text-muted mb-0">{{ current_user.city }}</p>
                         </div>
                     </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section style="background-color: #eee;">
+        <div class="container py-2">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="card mb-4 p-4">
+                <h1 class="text-center">Medical History</h1>
+                <div class="h-100 pt-3 d-flex align-items-center justify-content-center">
+                  <form method="post" action="/medical_history" class="form-control w-75 p-4">
+                    {{ form.hidden_tag() }}
+                    <h5>{{ form.medical_conditions.label }}</h5>
+                    <div class="col-xs-4 mb-3">
+                      {{ form.medical_conditions(class = "form-control") }}
+                    </div>
+                    <h5>{{ form.allergies.label }}</h5>
+                    <div class="col-xs-4 mb-3">
+                      {{ form.allergies(class = "form-control") }}
+                    </div>
+                    <h5>{{ form.medications.label }}</h5>
+                    <div class="col-xs-4 mb-3">
+                      {{ form.medications(class = "form-control") }}
+                    </div>
+                    <h5>{{ form.vaccine_history.label }}</h5>
+                    <div class="col-xs-4 mb-3">
+                      {{ form.vaccine_history(class = "form-control") }}
+                    </div>
+                    <h5>{{ form.family_history.label }}</h5>
+                    <div class="col-xs-4 mb-3">
+                      {{ form.family_history(class = "form-control") }}
+                    </div>
+                    <h5>{{ form.surgical_history.label }}</h5>
+                    <div class="col-xs-4 mb-3">
+                      {{ form.surgical_history(class = "form-control") }}
+                    </div>
+                    <h5>{{ form.lifestyle_habits.label }}</h5>
+                    <div class="col-xs-4 mb-3">
+                      {{ form.lifestyle_habits(class = "form-control") }}
+                    </div>
+                    {{ form.submit(class="btn btn-primary")}}
+                  </form>
                 </div>
               </div>
             </div>
