--- a/templates/myappointments.html
+++ b/templates/myappointments.html
@@ -23,6 +23,7 @@ User - Appointments
               <tr>
                 <th scope="col">Appointment No.</th>
                 <th scope="col">Patient Name</th>
+                <th scope="col">FastTrack</th>
                 <th scope="col">Age</th>
                 <th scope="col">DOB</th>
                 <th scope="col">Slot</th>
@@ -31,18 +32,49 @@ User - Appointments
               </tr>
             </thead>
             <tbody>
+              {% set fasttrack_appointments = [] %}
+              {% set regular_appointments = [] %}
               {% for appointment in appointments %}
+                {% if appointment.User.isFastrack %}
+                  {% set _ = fasttrack_appointments.append(appointment) %}
+                {% else %}
+                  {% set _ = regular_appointments.append(appointment) %}
+                {% endif %}
+              {% endfor %}
+              {% for appointment in fasttrack_appointments %}
                 <tr id="{{ loop.index }}">
                   <td>{{ loop.index }}</td>
                   <td>{{ appointment.User.name }}</td>
+                  <td>
+                    <a class="text-danger">FastTrack</a>
+                  </td>
                   <td>{{ appointment.User.dob|calculate_age }}</td>
                   <td>{{ appointment.User.dob.strftime('%d-%m-%Y') }}</td>
                   <td>{{ appointment.Appointment.slot.capitalize() }}</td>
-                  <!-- <td>{{ appointment.Appointment.status }}</td> -->
-
                   <td>
-                    <!-- /home/{{ appointment.Appointment.id }} -->
-                    <!-- data-mdb-toggle="modal" data-mdb-target="#exampleModal" -->
+                    <a href="/myappointments/{{ appointment.Appointment.id }}"><i class="fas fa-plus fa-fw me-3"></i></a> 
+                    <span>
+                      <a  href="{{ url_for('myappointments') }}"><i class="fas fa-minus fa-fw me-3"></i></a>
+                    </span>
+                  </td>
+                </tr>
+              {% endfor %}
+              {% for appointment in regular_appointments %}
+                <tr id="{{ loop.index }}">
+                  <td>{{ loop.index + loop.length  }}</td>
+                  <td>{{ appointment.User.name }}</td>
+                  <td>
+                    {% if appointment.User.isFastrack %}
+                      <a class="text-danger">FastTrack</a>
+                    {% else %}
+                    <a class="text-muted">No FastTrack</a>
+
+                    {% endif %}
+                  </td>
+                  <td>{{ appointment.User.dob|calculate_age }}</td>
+                  <td>{{ appointment.User.dob.strftime('%d-%m-%Y') }}</td>
+                  <td>{{ appointment.Appointment.slot.capitalize() }}</td>
+                  <td>
                     <a href="/myappointments/{{ appointment.Appointment.id }}"><i class="fas fa-plus fa-fw me-3"></i></a> 
                     <span>
                       <a  href="{{ url_for('myappointments') }}"><i class="fas fa-minus fa-fw me-3"></i></a>
