--- a/templates/base.html
+++ b/templates/base.html
@@ -30,12 +30,8 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
             <div class="container"><a class="navbar-brand d-flex align-items-center fw-bold fs-2" href="/"><img class="d-inline-block me-3" src="static/img/icons/logo.png" alt="" />MediAssist</a>
                 <div class="collapse navbar-collapse border-lg-0 mt-4 mt-lg-0der-top " id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto pt-2 pt-lg-0">
-                    <li class="nav-item"><a class="nav-link fw-bold active" aria-current="page" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('doctorlogin') }}">Doctor Login</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('userlogin') }}">Book an Appointment</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About us</a></li>
-                    </ul>
+                    {% block isactive %}
+                    {% endblock %}
                 </div>
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
