--- a/templates/doctorlogin.html
+++ b/templates/doctorlogin.html
@@ -4,6 +4,15 @@
 Login
 {% endblock %}
 
+{% block isactive %}
+<ul class="navbar-nav ms-auto pt-2 pt-lg-0">
+  <li class="nav-item"><a class="nav-link" aria-current="page" href="/">Home</a></li>
+  <li class="nav-item"><a class="nav-link fw-bold active" href="{{ url_for('doctorlogin') }}">Doctor Login</a></li>
+  <li class="nav-item"><a class="nav-link" href="{{ url_for('userlogin') }}">Book an Appointment</a></li>
+  <li class="nav-item"><a class="nav-link" href="#about">About us</a></li>
+</ul>
+{% endblock %}
+
 {% block main %}
 
 <div class="signup">
