--- a/templates/register.html
+++ b/templates/register.html
@@ -53,6 +53,16 @@ Register
                         <label class="form-label lead">Password</label>
                         {{ form.password(class="form-control") }}
                     </div>
+                    <div class="mb-3">
+                        <label class="form-label lead">Insurance</label>
+                        <select class="form-control" name="insurance">
+                            <option value="" disabled selected>--Select Insurance--</option>
+                            {% for insurance in insurances %}
+                            <option value="{{ insurance['accepted_insurance'] }}">{{ insurance['accepted_insurance'] }}</option>
+                            {% endfor %}
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
                     <!-- <div class="mb-3">
                         <label class="form-label lead">Confirm Password</label>
                         {{ form.password(class="form-control") }}
