--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
 
 
-    <title>VOS Medical Assistant{% block title %}{% endblock %}</title>
+    <title>MediAssist{% block title %}{% endblock %}</title>
 
 
 
