--- a/templates/home.html
+++ b/templates/home.html
@@ -122,7 +122,7 @@ User - Home
                           </div>
                           <div class="text-end">
                             <h3>3. </h3>
-                            <a href="{{ url_for('myappointments') }}" class="mb-0">Manage your Appointments</a>
+                            <a href="{{ url_for('myappointments') }}" class="mb-0">Manage Appointments</a>
                           </div>
                         </div>
                       </div>
