--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
   <li class="nav-item"><a class="nav-link fw-bold active" aria-current="page" href="/">Home</a></li>
   <li class="nav-item"><a class="nav-link" href="{{ url_for('doctorlogin') }}">Doctor Login</a></li>
   <li class="nav-item"><a class="nav-link" href="{{ url_for('userlogin') }}">Book an Appointment</a></li>
-  <li class="nav-item"><a class="nav-link" href="#about">About us</a></li>
+<li class="nav-item"><a class="nav-link" href="https://t.me/LifeHacktly_Bot"><button type="button"
+      class="btn btn-primary">Get LifeBot</button></a></li>
 </ul>
 {% endblock %}
 
