--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -17,16 +17,52 @@ Appointment
                 </div>
                 <h5>{{ form.slot.label }}</h5> 
                 <div class="col-xs-4 mb-3">
-                    {{ form.slot(class = "form-control") }}
+                    {{ form.slot(class = "form-control")}}
                 </div>
                 <h5>{{ form.date.label }}</h5> 
                 <div class="col-xs-4 mb-3">
                 {{ form.date(class="form-control")}}
                 </div>
+                <div class="col-xs-4 mb-3">
+                    <select name="hospital_id" id="hospital_id" required>
+                        <option value="">--Select a hospital--</option>
+                        {% for hospital in hospitals %}
+                        <option value="{{ hospital.id }}">{{ hospital.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
                 {{ form.submit(class="btn btn-primary")}}
             </form>
+
         </div>
 
+    </div>
+    <div class="p-1 m-5 pt-md-2">
+        <h1>Hospitals</h1>
+        <div class="d-flex justify-content-center" style="flex-wrap: wrap;">
+            {% for hospital in hospitals %}
+            <div class="card m-2" style="max-width: 400px;">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/184.webp" class="card-img-top" alt="Fissure in Sandstone"/>
+                <div class="card-body">
+                <h5 class="card-title">{{hospital.name}}</h5>
+                <div>
+                    Rating: 
+                    <i class="fa fa-star text-warning"></i>
+                    <i class="fa fa-star text-warning"></i>
+                    <i class="fa fa-star text-warning"></i>
+                    <i class="fa fa-star text-warning"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Molestiae doloribus aliquid assumenda tempore quis? Animi tempore, 
+                    quos similique, hic, autem a voluptatum cum perferendis dolores esse 
+                    quaerat excepturi delectus. Quisquam aspernatur asperiores exercitationem?
+                </p>
+                </div>
+          </div>
+          {% endfor %}
+        </div>
     </div>
 </div>
 
