--- a/templates/myappointments.html
+++ b/templates/myappointments.html
@@ -63,16 +63,18 @@ User - Appointments
                 <th scope="col">Appointment No.</th>
                 <th scope="col">Appointment Date</th>
                 <th scope="col">Appointment Slot</th>
+                <th scope="col">Hospital Name</th>
                 <th scope="col">Actions</th>
                 <!-- <th scope="col">Avg. Price</th> -->
               </tr>
             </thead>
             <tbody>
-              {% for appointment in appointments %}
+              {% for appointment,hospital in hospitals %}
                 <tr>
                   <td>{{ loop.index }}</td>
                   <td>{{ appointment.date.strftime('%d-%m-%Y') }}</td>
                   <td>{{ appointment.slot.capitalize() }}</td>
+                  <td>{{ hospital.name }}</td>
                   <td>
                     <a href="/delete_appointment/{{ appointment.id }}"><i class="fas fa-trash fa-fw me-3"></i></a> 
                   </td>
