hospital review ui change

--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -51,7 +51,7 @@ Appointment
                     <i class="fa fa-star text-warning"></i>
                     <i class="fa fa-star text-warning"></i>
                     <i class="fa fa-star text-warning"></i>
-                    <i class="fa fa-star"></i>
+                    <i class="fa-solid fa-star-sharp-half text-warning"></i>
                 </div>
                 <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
