--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <li class="nav-item"><a class="nav-link fw-bold active" aria-current="page" href="/">Home</a></li>
   <li class="nav-item"><a class="nav-link" href="{{ url_for('doctorlogin') }}">Doctor Login</a></li>
   <li class="nav-item"><a class="nav-link" href="{{ url_for('userlogin') }}">Book an Appointment</a></li>
-<li class="nav-item"><a class="btn btn-primary nav-link text-whitegit" href="https://t.me/LifeHacktly_Bot">
+<li class="nav-item"><a class="btn btn-primary nav-link text-white" href="https://t.me/LifeHacktly_Bot">
   Get LifeBot</a></li>
 </ul>
 {% endblock %}
