--- a/templates/doctorlogin.html
+++ b/templates/doctorlogin.html
@@ -9,7 +9,7 @@ Login
   <li class="nav-item"><a class="nav-link" aria-current="page" href="/">Home</a></li>
   <li class="nav-item"><a class="nav-link fw-bold active" href="{{ url_for('doctorlogin') }}">Doctor Login</a></li>
   <li class="nav-item"><a class="nav-link" href="{{ url_for('userlogin') }}">Book an Appointment</a></li>
-  <li class="nav-item"><a class="nav-link" href="https://t.me/LifeHacktly_Bot"><button type="button" class="btn btn-primary">Get LifeBot</button></a></li>
+  <li class="nav-item"><a class="btn btn-primary text-white nav-link" href="https://t.me/LifeHacktly_Bot">Get LifeBot</a></li>
 </ul>
 {% endblock %}
 
