--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -6,71 +6,43 @@ Appointment
 {% block main %}
 
 <div class="container pt-5">
-    <div class="pt-5 pt-md-2">
-        <h1>Book your Appointment</h1>
-        <div class="h-100 pt-3 d-flex align-items-center justify-content-center">
-            <form method="post" class="form-control w-75">
-                {{ form.hidden_tag() }}
-                <h5>{{ form.docDept.label }}</h5>
-                <div class="col-xs-4 mb-3">
-                    {{ form.docDept(class = "form-control") }}
-                </div>
-                <h5>{{ form.slot.label }}</h5>
-                {% if max_booked_slot %}
-                <p class="text-warning" >Peak Booking Slot / Hours: <strong>{{ max_booked_slot.capitalize() }} {% if max_booked_slot == 'morning' %}(09am - 12pm){% endif %}{% if max_booked_slot == 'afternoon' %}(05pm - 04pm){% endif %}{% if max_booked_slot == 'evening' %}(05pm - 08pm){% endif %}</strong></p>
-                {% endif %}
-                <div class="col-xs-4 mb-3">
-                    {{ form.slot(class = "form-control")}}
-                </div>
-                <h5>{{ form.date.label }}</h5> 
-                <div class="col-xs-4 mb-3">
-                {{ form.date(class="form-control")}}
-                </div>
-                <h5>Hospital</h5>
-                <div class="col-xs-4 mb-3">
-                    <select name="hospital_id" id="hospital_id" required>
-                        <option value="">--Select a hospital--</option>
-                        {% for hospital in hospitals %}
-                        <option value="{{ hospital.id }}">{{ hospital.name }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                {{ form.submit(class="btn btn-primary")}}
-            </form>
-
-        </div>
-
-    </div>
     <div class="p-1 m-5 pt-md-2">
-        <h1>Hospitals</h1>
-        <div class="d-flex justify-content-center" style="flex-wrap: wrap;">
-            {% for hospital in hospitals %}
-            <div class="card m-2" style="max-width: 400px;">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/184.webp" class="card-img-top" alt="Fissure in Sandstone"/>
-                <div class="card-body">
-                <h5 class="card-title">{{hospital.name}}</h5>
-                <div>
-                    Rating: 
-                    <i class="fa fa-star text-warning"></i>
-                    <i class="fa fa-star text-warning"></i>
-                    <i class="fa fa-star text-warning"></i>
-                    <i class="fa fa-star text-warning"></i>
-                    <i class="fa fa-star"></i>
+        <h1>Hospitals Nearby</h1>
+        <p class="text-muted w-75">Get a filtered list of hospitals near you based on your active Insurance policy and user ratings of the hospitals.</p>
+        <div class="container pt-5">
+            {% for hospital in ratings %}
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                  <div class="col-md-4">
+                    {% set random_image = image_urls|random %}
+                    <img src="{{ random_image }}" class="card-img" alt="Image">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">{{ loop.index }}. {{ hospital.name }}</h5>
+                      <div>
+                        Rating: {{ hospital.ratings }}
+                        {% for _ in range(hospital.ratings) %}
+                          <i class="fa fa-star text-warning"></i>
+                        {% endfor %}
+                        {% for _ in range(5 - hospital.ratings) %}
+                          <i class="fa fa-star"></i>
+                        {% endfor %}
+                      </div>
+                      <p class="card-text">Insurance Supported: <strong>{{ hospital.accepted_insurance }}</strong></p>
+                      <p class="card-text">"{{ hospital.name }}: Your trusted partner in healthcare, offering comprehensive services and compassionate care for a healthier future."</p>
+                      <p><a class="btn btn-primary">Contact</a> &nbsp;&nbsp;&nbsp; <a class="btn btn-danger" href="/appointment/bookappointment/{{ hospital.id }}">Book Appointment</a></p>
+                      <!-- Additional card content -->
+                    </div>
+                  </div>
                 </div>
-                <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Molestiae doloribus aliquid assumenda tempore quis? Animi tempore, 
-                    quos similique, hic, autem a voluptatum cum perferendis dolores esse 
-                    quaerat excepturi delectus. Quisquam aspernatur asperiores exercitationem?
-                </p>
-                </div>
-          </div>
-          {% endfor %}
+            </div>  
+            {% endfor %}
+        </div>
         </div>
     </div>
-</div>
 
 
 
 
-{% endblock %}
+    {% endblock %}
