--- a/templates/preconsult.html
+++ b/templates/preconsult.html
@@ -10,14 +10,17 @@ Preconsult
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
-<div class=" card text-center">
-    <select class="selectpicker" multiple data-live-search="true">
+<form action="/preconsult/{{ id }}" method="post" class="form-control">
+<div class="card w-75 mx-auto my-auto d-flex justify-content-center align-items-center" style="height: 30vh;">
+    <h2 class="my-3">Preconsultation</h2>
+    <select class="selectpicker form-group" name="selected_symptom" multiple data-live-search="true">
         {% for i in symptoms %}
         <option value="{{ i }}">{{ i }}</option>
         {% endfor %}
     </select>
+    <input type="submit" class="btn btn-primary">
 </div>
-
+</form>
 
 <script>$('select').selectpicker();</script>
 {% endblock %}
