--- a/templates/viewpatient.html
+++ b/templates/viewpatient.html
@@ -100,5 +100,49 @@ User - My Patients
           </div>
         </div>
       </section>
+      <section style="background-color: #eee;">
+        <div class="container py-2">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="card mb-4 p-4">
+                <h1 class="text-center">Medical History</h1>
+                <div class="h-100 pt-3 d-flex align-items-center justify-content-center">
+                  <form method="post" action="/medical_history" class="form-control w-75 p-4">
+                    <h5>{{ form.medical_conditions.label }}: </h5>
+                    <div class="col-xs-4 m-3">
+                      {{ patient.medical_conditions }}
+                    </div>
+                    <h5>{{ form.allergies.label }}: </h5>
+                    <div class="col-xs-4 m-3">
+                      {{ patient.allergies }}
+                    </div>
+                    <h5>{{ form.medications.label }}: </h5>
+                    <div class="col-xs-4 m-3">
+                      {{ patient.medications }}
+                    </div>
+                    <h5>{{ form.vaccine_history.label }}: </h5>
+                    <div class="col-xs-4 m-3">
+                      {{ patient.vaccine_history }}
+                    </div>
+                    <h5>{{ form.family_history.label }}: </h5>
+                    <div class="col-xs-4 m-3">
+                      {{ patient.family_history }}
+                    </div>
+                    <h5>{{ form.surgical_history.label }}: </h5>
+                    <div class="col-xs-4 m-3">
+                      {{ patient.surgical_history }}
+                    </div>
+                    <h5>{{ form.lifestyle_habits.label }}: </h5>
+                    <div class="col-xs-4 m-3">
+                      {{ patient.lifestyle_habits }}
+                    </div>
+                    <a href="/mypatients" class="btn btn-primary">Back to My Patients</a>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 </div>
 {% endblock %}
